--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <style>
     body {
-  background: linear-gradient(to bottom, #000000, #3a0057, #550075);
+  background-image:url("images/background.png") ;
   background-repeat: no-repeat;
   background-size: cover;   /* make sure images cover the whole screen */
   margin: 0;
@@ -16,86 +16,31 @@
   font-family: Arial, sans-serif;
   text-decoration: none;
   }
-  .navbar {
-  position: fixed;
-  top: 50%;
-  left: 10px;
-  transform: translateY(-50%);
-  width: 60px; /* thinner width since it's vertical */
-  height: auto;
-  background: linear-gradient(
-    145deg,
-    rgba(0, 0, 0, 0.842),
-    rgba(0, 0, 0, 0.534)
-  );
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  box-shadow:
-    inset 0 1px 2px rgba(46, 46, 46, 0.3),
-    0 4px 10px rgba(0, 0, 0, 0.4);
-  border-radius: 100px;
-  display: flex;
-  flex-direction: column; /* now stack items vertically */
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding: 10px 0;
-  box-shadow: 0px 4px 12px #31313133;
-  opacity: 0.6;
-  backdrop-filter: blur(2px);
-  transition: all 0.1s ease-in-out; 
-}
-.navbar:hover{
-  border-radius: 20px;
-}
-.navbar img{
-  opacity:1;
-}
-</style>>
+  .start{
+    inset: 0;
+    margin:auto;
+    position: fixed;
+    z-index: 1000;
+    background-color: black;
+    width:500px;
+    height:300px;
+    border-radius:20px;
 
-
-</head>
-
-<div id="navbar" class="navbar">
-  <a onclick="t9()">
-    <img src="favicon.png">
-  </a>
-  <a id="toggleDivButton">
-    <img src="gameicon.png">
-  </a>
-   <a onclick="ai()">
-    <img src="ai.png">
-  </a>
-  <a onclick="movie()">
-    <img src="movie2.png">
-  </a>
-  <a onclick="s()">
-    <img  src="search.png">
-  </a>
-  
-  <a onclick="emulator()">
-    <img src="apps1.png">
-  </a>
-
-    <a onclick="Chat()">
-    <img src="chat2.png">
-  </a>
-  
-
-
-</div>
-
-<body>
-
-    <script>
-
-  if (!localStorage.getItem("bg")) {
-    localStorage.setItem("bg", "url('/images/background.png') no-repeat center center fixed");
   }
 
- 
-  document.body.style.background = localStorage.getItem("bg");
-  document.body.style.backgroundSize = "cover"; 
-</script>
-    
+</style>>
+</head>
+<body>
+  <div class="start">
+    <h1 style="text-align:center; color:white;">T9's secret vault</h1>
+    <a  href="start.html">
+      <h3 style=" width:40px; height:20px; display:block; margin: 0 auto; background-color: azure; color:black; padding:10px 15px; text-decoration: none; border-radius: 20px;">start</h3>
+
+    </a>
+
+
+    </div>
+
+
 </body>
 </html>
